$Date$

VEGAN RELEASE VERSIONS at http://cran.r-project.org/

Version 1.17-1 (opened February 16, 2010)

	* merged r1124: envfit() weights fixed for cca().

	* merged r1123: CCorA() output fixes plus upgrades of
	biplot.CCorA(). 
	
Version 1.17-0 (released January 11, 2010)

	* Copied from vegan/pkg/vegan version 1.16-34 (rev1087).

	* removed treedist().

	* Documented na.action in cca.object (copied from 1.18-0). 

	* removed MOStest.

	* removed multipart.

	* merged betadisper updates (rev1096 & 1114). 

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.16-34 (closed January 2, 2010) -- (codename: Lucia)

	* twostagechao: deleted, because question regarding the
	notation in the original article remained unanswered.

	* permat* cleanup: permat.control deleted, not needed any longer
	due to changes in oecosimu, documentation for plot.permat merged
	with permat* help page.

	* goodness.cca: was not using correct weights. Broken in r992 (Sep
	6, 2009).

	* vegdist: added UI for the alternative Gower index ("altGower")
	that skips double zeros. The C code has been in vegan since Oct 24
	(r1051), but no R interface. Together with decostand(..., "log")
	of r1052 this closes Feature Request #473 submitted by Etienne
	Laliberte in R-Forge.

	* anova.cca: tied values could be randomly broken due to
	numerical precision, and this gave false P-values, for instance in
	anova(cca(dune ~ Management, dune.env),
	strata=dune.env$Management).  Now rounds statistics to 12 decimal
	places in permutest.cca and in anova.ccabyterm.

	* permutest.cca: uses pasteCall() in print.

	* betadisper: added spatial median code written by Jari to betadisper.
	All associated methods work OK, and this should be the default method
	but needs a little checking first. This requires the new function
	'ordimedian', which is currently undocumented in ?betadisper.

Version 1.16-33 (closed December 13, 2009)

	* DESCRIPTION: Guillaume Blanchet added to the Authors.
