@@ -1,5 +1,5 @@
 `predict.rda` <-
-    function (object, newdata, type = c("response", "wa", "sp", "lc"), 
+    function (object, newdata, type = c("response", "wa", "sp", "lc", "working"), 
               rank = "full", model = c("CCA", "CA"), scaling = FALSE, ...) 
 {
     type <- match.arg(type)
@@ -22,7 +22,7 @@
     if (is.null(w)) 
         w <- u
     slam <- diag(sqrt(object[[model]]$eig[1:take] * nr), nrow = take)
-    if (type == "response") {
+    if (type %in% c("response", "working")) {
         if (!is.null(object$pCCA)) 
             warning("Conditional ('partial') component ignored")
         if (inherits(object, "capscale")) {
@@ -36,9 +36,13 @@
                 rownames(out) <- rownames(u)
                 colnames(out) <- rownames(v)
             }
-            if (!is.null(scal)) 
-                out <- sweep(out, 2, scal, "*")
-            out <- sweep(out, 2, cent, "+")
+            if (type == "response") {
+                if (!is.null(scal)) 
+                    out <- sweep(out, 2, scal, "*")
+                out <- sweep(out, 2, cent, "+")
+            } else {
+                out <- out/sqrt(nrow(out) - 1)
+            }
         }
     }
     else if (type == "lc") {
@@ -73,6 +77,12 @@
                 stop("'wa' scores not available in capscale with 'newdata'")
             if (!is.null(object$pCCA)) 
                 stop("No 'wa' scores available (yet) in partial RDA")
+            nm <- rownames(v)
+            if (!is.null(nm)) {
+                if (!all(nm %in% colnames(newdata)))
+                    stop("'newdata' does not have named columns matching one or more the original columns")
+                newdata <-  newdata[, nm, drop = FALSE]
+            }
             Xbar <- as.matrix(newdata)
             Xbar <- sweep(Xbar, 2, cent, "-")
             if (!is.null(scal)) {
@@ -93,6 +103,12 @@
         if (inherits(object, "capscale")) 
             warning("'sp' scores may be meaningless in 'capscale'")
         if (!missing(newdata)) {
+            nm <- rownames(u)
+            if (!is.null(nm)) {
+                if (!all(nm %in% rownames(newdata)))
+                    stop("'newdata' does not have named rows matching one or more of the original rows")
+                newdata <- newdata[nm, , drop = FALSE]
+            }
             Xbar <- as.matrix(newdata)
             Xbar <- scale(Xbar, center = TRUE, scale = scaled.PCA)
             if (!is.null(object$pCCA)) 
